added football players